# esp32s31

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.github/: copilot-instructions.md
components/ai_toy_ws_client/: CMakeLists.txt  ai_toy_ws_client.c  ai_toy_ws_protocol.c
components/ai_toy_ws_client/include/: ai_toy_ws_client.h
components/ai_toy_ws_client/priv_include/: ai_toy_ws_protocol.h
components/esp_board_manager_adapter/: esp_board_manager_adapter.c  idf_component.yml
components/xiaozhi_custom_wake_word/: CMakeLists.txt  Kconfig  xiaozhi_custom_wake_word.c
components/xiaozhi_custom_wake_word/include/: xiaozhi_custom_wake_word.h
main/: CMakeLists.txt  Kconfig.projbuild  esp_xiaozhi_chat_app.c  esp_xiaozhi_chat_app.h  esp_xiaozhi_chat_display.c  esp_xiaozhi_chat_display.h  idf_component.yml  main.c
